parser/src/parser/snapshots/enderpy__parser__parser__tests__string_literal_concatnation-9.snap
---
source: src/parser/parser.rs
description: "f'a' 'c'"
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 8,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 3,
                                    end: 0,
                                },
                                value: Str(
                                    "a",
                                ),
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 8,
                                },
                                value: Str(
                                    "c",
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
