parser/src/parser/snapshots/enderpy__parser__parser__tests__subscript-5.snap
---
source: src/parser/parser.rs
description: "a[b, c: d, e]"
---
Module {
    node: Node {
        start: 0,
        end: 13,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 13,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Tuple(
                        Tuple {
                            node: Node {
                                start: 2,
                                end: 13,
                            },
                            elements: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 2,
                                            end: 3,
                                        },
                                        id: "b",
                                    },
                                ),
                                Slice(
                                    Slice {
                                        node: Node {
                                            start: 6,
                                            end: 9,
                                        },
                                        lower: Some(
                                            Name(
                                                Name {
                                                    node: Node {
                                                        start: 5,
                                                        end: 6,
                                                    },
                                                    id: "c",
                                                },
                                            ),
                                        ),
                                        upper: Some(
                                            Name(
                                                Name {
                                                    node: Node {
                                                        start: 8,
                                                        end: 9,
                                                    },
                                                    id: "d",
                                                },
                                            ),
                                        ),
                                        step: None,
                                    },
                                ),
                                Name(
                                    Name {
                                        node: Node {
                                            start: 11,
                                            end: 12,
                                        },
                                        id: "e",
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ),
    ],
}
