parser/src/parser/snapshots/enderpy__parser__parser__tests__subscript-6.snap
---
source: src/parser/parser.rs
description: "a[::]"
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 5,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Slice(
                        Slice {
                            node: Node {
                                start: 2,
                                end: 4,
                            },
                            lower: None,
                            upper: None,
                            step: None,
                        },
                    ),
                },
            ),
        ),
    ],
}
