parser/src/parser/snapshots/enderpy__parser__parser__tests__subscript-7.snap
---
source: src/parser/parser.rs
description: "a[b, c:d:e, f]"
---
Module {
    node: Node {
        start: 0,
        end: 14,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 14,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Tuple(
                        Tuple {
                            node: Node {
                                start: 2,
                                end: 14,
                            },
                            elements: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 2,
                                            end: 3,
                                        },
                                        id: "b",
                                    },
                                ),
                                Slice(
                                    Slice {
                                        node: Node {
                                            start: 6,
                                            end: 10,
                                        },
                                        lower: Some(
                                            Name(
                                                Name {
                                                    node: Node {
                                                        start: 5,
                                                        end: 6,
                                                    },
                                                    id: "c",
                                                },
                                            ),
                                        ),
                                        upper: Some(
                                            Name(
                                                Name {
                                                    node: Node {
                                                        start: 7,
                                                        end: 8,
                                                    },
                                                    id: "d",
                                                },
                                            ),
                                        ),
                                        step: Some(
                                            Name(
                                                Name {
                                                    node: Node {
                                                        start: 9,
                                                        end: 10,
                                                    },
                                                    id: "e",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                Name(
                                    Name {
                                        node: Node {
                                            start: 12,
                                            end: 13,
                                        },
                                        id: "f",
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ),
    ],
}
