parser/src/parser/snapshots/enderpy__parser__parser__tests__tuple-4.snap
---
source: src/parser/parser.rs
description: "(a,\n            b,\n                c)"
---
Module {
    node: Node {
        start: 0,
        end: 37,
    },
    body: [
        ExpressionStatement(
            Tuple(
                Tuple {
                    node: Node {
                        start: 0,
                        end: 36,
                    },
                    elements: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 16,
                                    end: 17,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 35,
                                    end: 36,
                                },
                                id: "c",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
